2023/03/27 해시태그 팔로우 작업중

--- a/Spring/Photostagram/src/main/resources/templates/search/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/search/index.html
@@ -76,7 +76,18 @@
 $(function(){
     $('.followBtn').on('click', function(e){
         e.preventDefault();
-        alert('클릭');
+
+        let location = window.location.href;
+        console.log(location);
+
+        const url = new URL(location);
+        const urlParams = url.searchParams;
+        console.log(url);
+        console.log(urlParams.get('no'));
+
+        let no = urlParams.get('no');
+
+
     });
 });
 </script>
