--- a/Spring/Photostagram/src/main/resources/templates/board/post.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/post.html
@@ -90,7 +90,7 @@
             <section class="contents">
                 <nav>
                     <div id="profile">
-                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
+                        <img th:src="|@{/}thumb/${user.profileImg}"  alt="profile">
                         <p class="postTop">
                             <span id="nick">[[${user.username}]]</span>
                             <span>·</span>
@@ -102,7 +102,7 @@
                 </nav>
                 <ul>
                     <li>
-                        <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
+                        <img class="proImg" th:src="|@{/}thumb/${user.profileImg}"  alt="profile">
                         <div class="reply">
                             <h1><span>[[${user.username}]]</span>[[${post.content}]]</h1>
                             <th:block th:each="hash:${hashes}">
